# worker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: worker.yml
src/: config.rs  handler.rs  main.rs  message.rs  notifier.rs  rabbitmq.rs  redis.rs
uploads/01JTG0ZN66D2EDP1HYBAMSJ3WD-01JTQZH6PPJ62AAW9WMNB8WK30/: 20250508T125707Z.txt
uploads/01JTG0ZN66D2EDP1HYBAMSJ3WD-01JTSE0HHK8T12WE91EDDKZ9J0/: 20250509T022924Z.txt
